Try to fix travisci build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: objective-c
 
 before_install: git submodule update --init --recursive
-xcode_project: PactConsumerSwift.xcodeproj
-xcode_scheme: PactConsumerSwift
+script:
+    - xcodebuild -workspace Vendor/Alamofire/Alamofire.xcworkspace -scheme Alamofire clean build
+    - xcodebuild -workspace PactConsumerSwift.xcworkspace -scheme PactConsumerSwift clean test -sdk iphonesimulator8.1
