--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
-[submodule "Vendor/Alamofire"]
-	path = Vendor/Alamofire
+
+[submodule "Carthage/Checkouts/Alamofire"]
+	path = Carthage/Checkouts/Alamofire
 	url = https://github.com/Alamofire/Alamofire.git
-[submodule "Vendor/Quick"]
-	path = Vendor/Quick
-	url = https://github.com/Quick/Quick.git
-[submodule "Vendor/Nimble"]
-	path = Vendor/Nimble
+[submodule "Carthage/Checkouts/Nimble"]
+	path = Carthage/Checkouts/Nimble
 	url = https://github.com/Quick/Nimble.git
+[submodule "Carthage/Checkouts/Quick"]
+	path = Carthage/Checkouts/Quick
+	url = https://github.com/Quick/Quick.git
