Remove testing of example projects.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,12 @@ before_install:
 - scripts/import_keychain.sh
 - brew update
 - brew install carthage
-- carthage checkout
-- gem install pact-mock_service -v 0.2.4
+- carthage bootstrap
 - gem instal xcpretty
 script:
 - set -o pipefail
 - carthage build --no-skip-current
 - xcodebuild -workspace PactConsumerSwift.xcworkspace -scheme PactConsumerSwift test -sdk iphonesimulator8.1 | xcpretty -c
-- xcodebuild -workspace PactConsumerSwift.xcworkspace -scheme 'iOS Swift Example' test -sdk iphonesimulator8.1 | xcpretty -c
 after_script: scripts/delete_keychain.sh
 env:
   global:
