Try and stop test dependencies from being required with normal build.

--- a/PactConsumerSwift.xcodeproj/xcshareddata/xcschemes/PactConsumerSwift.xcscheme
+++ b/PactConsumerSwift.xcodeproj/xcshareddata/xcschemes/PactConsumerSwift.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A11F1A751A5C890E00DAB9CE"
