--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
 - set -o pipefail
 - carthage build --no-skip-current
-- xcodebuild -workspace PactConsumerSwift.xcworkspace -scheme PactConsumerSwift test
+- xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test
   -sdk iphonesimulator8.1 | xcpretty -c
 after_script: scripts/delete_keychain.sh
 after_success: scripts/build_children.sh
