Remove git submodules for carthage dependencies. Update travis build for xcode 6.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode611
+osx_image: beta-xcode6.3
 before_install:
 - scripts/import_keychain.sh
 - brew update
@@ -11,7 +11,7 @@ script:
 - set -o pipefail
 - carthage build --no-skip-current
 - xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test
-  -sdk iphonesimulator8.1 | xcpretty -c
+  -sdk iphonesimulator | xcpretty -c
 after_script: scripts/delete_keychain.sh
 after_success: scripts/build_children.sh
 env:
