--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ osx_image: beta-xcode6.3
 before_install:
 - scripts/import_keychain.sh
 - brew update
-- gem install pact-mock_service -v 0.5.5
+- brew install carthage
+- gem install pact-mock_service -v 0.5.1
 - bundle install
-- gem install cocoapods
-- pod install
+- carthage checkout
 script:
 - set -o pipefail
-- xcodebuild -workspace PactConsumerSwift.xcworkspace -scheme PactConsumerSwift test
+- carthage build --no-skip-current
+- xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test
   -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty -c
 after_script: scripts/delete_keychain.sh
 after_success: scripts/build_children.sh
