--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ osx_image: xcode7
 before_install:
 - scripts/import_keychain.sh
 - brew update
-- brew install carthage
 - gem install pact-mock_service -v 0.5.1
 - bundle install
-- carthage checkout
+- curl -L -O https://github.com/Carthage/Carthage/releases/download/0.9.3/Carthage.pkg
+- sudo installer -pkg Carthage.pkg -target /
 script:
 - set -o pipefail
-- carthage build --no-skip-current
+- carthage bootstrap --verbose
 - xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test
   -sdk iphonesimulator | xcpretty -c
 after_script: scripts/delete_keychain.sh
@@ -18,3 +18,6 @@ env:
   global:
   - secure: QmmEqePFeG6D1Qu0KrWI0w6LiwiY3V2qUWAHxQrSYFFPG4wJOZuHpwdk9NO45gOzPYxbkzXT9MynWFMs5pZKrIJCmQRkK5fNcDecwvNunsJEzBmvNYLhd0B4IKy2R1pBmKcDHPIYCzgpanPDAV7LhTXlGoUGk59+QL6qK8+hBQs=
   - secure: FpfacekFs93LkX9gerQUxQKIDTjBl2abp7ZQ/8L3DiJo4nMF7xEwUGeSDQMR+2hRqRWr/SdU59Lll5k10JBqWxAaLXDTUq3Lh3aamc4nc2PAN7yp+0aq9RQG5+PaLkfx+SLs5B/CjDiRRotZg/H/uMTRRFbkqydVtxiqGv94JOg=
+  - CODE_SIGNING_REQUIRED=NO
+  - CODE_SIGN_IDENTITY=""
+  - PROVISIONING_PROFILE=""
