--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - bundle install
 - curl -L -O https://github.com/Carthage/Carthage/releases/download/0.9.3/Carthage.pkg
 - sudo installer -pkg Carthage.pkg -target /
-- security find-identity -v -p codesigning
+- ./scripts/add-key.sh
 script:
 - set -o pipefail
 - carthage bootstrap --platform iOS
