--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ before_install:
 - bundle install
 - curl -L -O https://github.com/Carthage/Carthage/releases/download/0.9.3/Carthage.pkg
 - sudo installer -pkg Carthage.pkg -target /
-- ./scripts/add-key.sh
 script:
 - set -o pipefail
-- carthage bootstrap --platform iOS
+- carthage bootstrap --platform iOS --no-use-binaries
 - xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test  -destination 'platform=iOS Simulator,OS=9.2,name=iPhone 6'
   -sdk iphonesimulator | xcpretty -c
 after_script: scripts/delete_keychain.sh
