--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: objective-c
-osx_image: xcode7
+osx_image: xcode7.2
 before_install:
 - scripts/import_keychain.sh
+- security find-identity -v -p codesigning
 - brew update
 - brew install carthage
 - gem install pact-mock_service -v 0.5.1
@@ -9,8 +10,8 @@ before_install:
 - carthage checkout
 script:
 - set -o pipefail
-- carthage build --no-skip-current
-- xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test
+- carthage build --no-skip-current --platform iOS
+- xcodebuild -project PactConsumerSwift.xcodeproj -scheme PactConsumerSwift test -destination 'platform=iOS Simulator,OS=9.2,name=iPhone 6'
   -sdk iphonesimulator | xcpretty -c
 after_script: scripts/delete_keychain.sh
 after_success: scripts/build_children.sh
