--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ before_install:
 - gem install pact-mock_service -v 0.12.0
 - bundle install
 - carthage checkout
+install:
+- scripts/install_swiftlint.sh
 script:
 - set -o pipefail
 - carthage build --no-skip-current --platform iOS
+- swiftlint
 - scripts/build.sh
 after_script: scripts/delete_keychain.sh
 after_success: scripts/build_children.sh
