--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,33 +4,26 @@ excluded:
   - certificates
   - PactConsumerSwiftTests/
   - Products/
-
 included:
   - PactConsumerSwift/
-
 opt_in_rules:
-- empty_count
-
+  - empty_count
 force_cast:
   severity:
-    warning # implicitly
+    warning
 force_try:
-  severity: warning # explicitly
-
+  severity: warning
 type_body_length:
   - 300 # warning
   - 400 # error
-
 file_length:
   warning: 500
   error: 1200
-
 type_name:
-  min_length: 4 # only warning
-  max_length: # warning and error
+  min_length: 4
+  max_length:
     warning: 40
     error: 50
-
 identifier_name:
   min_length:
     error: 4
@@ -42,5 +35,4 @@ identifier_name:
     - PUT
     - min
     - max
-
 reporter: "xcode"
