--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - gem install pact-mock_service -v 0.12.0
   - bundle install
   - brew update
-  - brew install swiftlint
+  - brew upgrade swiftlint
   - carthage checkout
 script:
   - set -o pipefail
