--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ script:
   - swiftlint
   - carthage build --no-skip-current --platform iOS
   - scripts/build.sh
+  - xcodebuild -scheme PactConsumerSwift -workspace PactConsumerSwift.xcworkspace -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.0' -enableCodeCoverage YES build test
 after_script: scripts/delete_keychain.sh
-after_success: scripts/build_children.sh
+after_success:
+  - scripts/build_children.sh
+  - bash <(curl -s https://codecov.io/bash) -J 'pact-consumer-swift' -t 75136073-1e91-4b4a-8359-e51e2d30b3f9
 env:
   global:
     - secure: QmmEqePFeG6D1Qu0KrWI0w6LiwiY3V2qUWAHxQrSYFFPG4wJOZuHpwdk9NO45gOzPYxbkzXT9MynWFMs5pZKrIJCmQRkK5fNcDecwvNunsJEzBmvNYLhd0B4IKy2R1pBmKcDHPIYCzgpanPDAV7LhTXlGoUGk59+QL6qK8+hBQs=
