Prepares Swift PM project structure

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,7 +5,7 @@ excluded:
   - PactConsumerSwiftTests/
   - Products/
 included:
-  - PactConsumerSwift/
+  - Sources/
 opt_in_rules:
   - empty_count
 force_cast:
