--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"  CARTHAGE_PLATFORM="iOS"
     - DESTINATION="OS=9.3,name=iPhone 6"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"  CARTHAGE_PLATFORM="iOS"
 
-#    - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"  CARTHAGE_PLATFORM="tvOS"
-#    - DESTINATION="OS=9.2,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"  CARTHAGE_PLATFORM="tvOS"
+   - DESTINATION="OS=10.2,name=Apple TV 1080p"    SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"  CARTHAGE_PLATFORM="tvOS"
+   - DESTINATION="OS=9.2,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"  CARTHAGE_PLATFORM="tvOS"
 
     - DESTINATION="arch=x86_64"                    SCHEME="$MACOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"  CARTHAGE_PLATFORM="macOS"
 before_install:
