Adds support for macOS and tvOS targets using Carthage and SwiftPM (#32)
* Updates the project with Xcode suggested Swift4 updates

* Updates frameworks’ version in Cartfile

* Removes argument from closure

* Explicitly exposes swift functions to objc

* Fixes non-prototype declaration

* Bumps up TravisCI osx_image to 9

* Removes block declaration is not a prototype warning

* Prepares Swift PM project structure

* Builds and tests for iOS target

* Builds for macOS and tvOS targets

* Still supports older deployment targets

- iOS 9.3
- macOS 10.10
- tvOS 9.2

* TravisCI builds for the Apple’s four platforms

* Does not explicitly upgrade swiftlint

TravisCI complained that latest swiftlint was already installed.

* The order of script steps *is* important

* Build dependencies for all supported platforms

* Discards fastlane scan and uses xcodebuild matrix

* TravisCI builds dependencies only for the needed platform

* Disables bitcode for iOS target

- Nimble framework does not contain bitcode

* Excludes watchOS

Dependency Nimble does not (yet) support watchOS

* TravisCI does not build for watchOS

* Builds for iOS and macOS using Carthage

- tests on iOS 11, 10.3.1 and 9.3
- tests on macOS x86_64

* Project structure cleanup

* Adds support for Swift Package Manager

* Updates Podspec and Supports Swift Package Manager

* Updates podspec

* Updates README.md

* Removes Scanfile and updates Contributing information

- Scanfile no longer valid as framework supports macOS as well
- Adds contributing information how to test for different platforms and package managers
- Fixes code coverage settings

* Updates documentation and fixes scheme test pre- post- scripts

* Updates README.md

* Updates README.md and Travis config

* Removes writing mock service startup/stop to log files

* Updates README.md

* Improves test coverage

* Removes iOS incompatible files

* Adds Carthage t

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,10 +2,9 @@ excluded:
   - scripts
   - Carthage
   - certificates
-  - PactConsumerSwiftTests/
   - Products/
 included:
-  - PactConsumerSwift/
+  - Sources/
 opt_in_rules:
   - empty_count
 force_cast:
